--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/pack/colors/opt/everforest"]
 	path = .vim/pack/colors/opt/everforest
 	url = https://github.com/sainnhe/everforest.git
+[submodule ".vim/pack/plugins/opt/YouCompleteMe"]
+	path = .vim/pack/plugins/opt/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe
